# rust-gl-lib

./: #tmp.txt#  .gitignore  Cargo.toml  README.md  build.rs  fonts.txt
assets/fonts/: Consolas_10.fnt  Consolas_12.fnt  Consolas_13.fnt  Consolas_14.fnt  Consolas_15.fnt  Consolas_16.fnt  Consolas_20.fnt  Consolas_32.fnt  Consolas_8.fnt  msdf_arial.json  msdf_consolas.json  msdf_consolas_16.json  msdf_consolas_32.json  softmask_consolas_10.json  softmask_consolas_12.json  softmask_consolas_13.json  softmask_consolas_14.json  softmask_consolas_16.json  softmask_consolas_18.json
assets/msdf-atlas-gen/: arial.csv  generate.bat  generate_from_arg.bat  msdf_arial.json
assets/shaders/: alpha_mask_text_render.frag  alpha_mask_text_render.vert  msdf_text_render.frag  sdf_text_render.frag  sdf_text_render.vert  softmask_text_render.frag  text_render.frag
examples/: #gltf_viewer.rs#  .#gltf_viewer.rs  2d_animation_player.rs  3dscene.rs  add_to_row.rs  alignment.rs  alignment_center.rs  bezier.rs  cube.rs  cubemap.rs  fill.rs  fill_portion.rs  fps.rs  framebuffer.rs  gltf_viewer.rs  goap.toml  goap_simple.rs  grid.rs  hitbox_shader_test.rs  imode_2d.anim.rs  imode_2d_anim.rs  imode_angle_circle.rs  imode_bezier.rs  imode_graph.rs  imode_macro.rs  imode_polygon_interpolation.rs  imode_polygon_interpolation_2.rs  imode_polygon_transform_interpolation.rs  imode_round_rect.rs  imode_sound.rs  imode_styler.rs  imode_text.rs  imode_text2.rs  imode_toonshader.rs  imode_window.rs  large_text.rs  line_walker.rs  perlin_noise_map.rs  procedual_animation.rs  prodecual_anim.rs  (+14 more)
examples/2d_animation_player/: main.rs  sheet_array_animation.rs
examples/3d_tic_tac_toe/: main.rs
examples/3dscene/: main.rs  scene.rs
examples/SneakGame/: Reame.md
examples/bouncy_ball/: main.rs
examples/collision_polygon_mapper/: Sword.json  main.rs
examples/fonts/: main.rs
examples/gjk/: #gjk.rs#  .#gjk.rs  error.json  gjk.rs  line_segment_intersection.rs  main.rs  options.rs  polygon.rs
examples/gltf_viewer/: main.rs
examples/goap/: actions.toml  goals.toml  main.rs
examples/img_explorer/: main.rs
examples/imode_image/: main.rs
examples/inverse_kinematics/: main.rs
examples/minesweeper/: main.rs
examples/particles/: main.rs
examples/pixel_sekiro/: ai.rs  audio_player.rs  entity.rs  inputs.rs  main.rs  scene.rs
examples/poly_tri/: Readme.md  framebuffer.rs  main.rs  ttf.rs
examples/quad_tree_visualizer/: main.rs
examples/sheet_polygon_mapper/: Target.json  main.rs  main_1.rs
examples/spraywall/: main.rs
examples/toonshader/: actions.toml  goals.toml  main.rs  ui.rs
examples/top_rpg/: damage_text.rs  main.rs  shoot.rs
examples/top_shooter/: main.rs  shoot.rs
gl-lib_proc/: Cargo.toml
gl-lib_proc/src/: lib.rs  load_by_name.rs
src/: #scene_3d.rs#  .#scene_3d.rs  README.md  buffer.rs  color.rs  deltatime.rs  general_animation.rs  goap.rs  image.rs  lib.rs  math.rs  movement.rs  scene_3d.rs  texture.rs  typedef.rs
src/animations/: gltf_animation.rs  mod-copy.rs  mod.rs  sheet_animation.rs  skeleton.rs  types.rs
src/audio/: audio_player.rs
src/camera/: camera.rs  follow_camera.rs  free_camera.rs  mod.rs  rts_camera.rs  rts_follow.rs
src/collision2d/: gjk.rs  line_segment_intersection.rs  mod.rs  polygon.rs
src/collision3d/: mod.rs  projection_collision.rs
src/controller/: mod.rs
src/gl/: mod.rs  viewport.rs
src/goap/: mod.rs
src/helpers/: mod.rs
src/imode_gui/: README.md  drawer2d.rs  mod.rs  numeric.rs  ui.rs  widgets.rs
src/math/: mod.rs
src/objects/: bezier.rs  char_quad.rs  color_square.rs  cube.rs  cubemap.rs  gltf_mesh.rs  instance_square.rs  mesh.rs  mod.rs  plane.rs  polygon.rs  shadow_map.rs  skeleton.rs  (+5 more)
tests/: alignment_tests.rs  fill_tests.rs  widget_gui_layout.rs
(+208 files in other folders)
